--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,6 @@ ul {
 }
 
 button, input, select {
-  position: grid;
   border: 2px solid transparent;
   background-color: #EAEAEA;
   align-items: center;
@@ -124,7 +123,7 @@ button, input, select {
   height: 30px; 
   font-size: 16px; 
   padding: 1em; 
-  border-radius: 5px; /
+  border-radius: 5px; 
 
 }
 
